# Copyright (c) Joby Aviation 2022
# Original authors: Thulio Ferraz Assis (thulio@aspect.dev), Aspect.dev
#
# Copyright (c) Thulio Ferraz Assis 2024
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//rules_cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_binary(
    name = "asan",
    srcs = ["asan.cc"],
)

sh_test(
    name = "asan_test",
    srcs = ["sanitizer_test.sh"],
    data = [
        ":asan",
        "@gcc_toolchain_x86_64//:libasan",
    ],
    env = {
        "BINARY": "$(rootpath :asan)",
        "EXPECTED_MESSAGE": "ERROR: AddressSanitizer: heap-use-after-free",
        "INTERNAL_LD_PRELOAD": "$(rootpath @gcc_toolchain_x86_64//:libasan)",
    },
    tags = ["manual"],
)

cc_binary(
    name = "lsan",
    srcs = ["lsan.cc"],
)

# The lsan test requires SYS_PTRACE capability when running under a containerized environment.
sh_test(
    name = "lsan_test",
    srcs = ["sanitizer_test.sh"],
    data = [
        ":lsan",
        "@gcc_toolchain_x86_64//:liblsan",
    ],
    env = {
        "BINARY": "$(rootpath :lsan)",
        "EXPECTED_MESSAGE": "ERROR: LeakSanitizer: detected memory leaks",
        "INTERNAL_LD_PRELOAD": "$(rootpath @gcc_toolchain_x86_64//:liblsan)",
    },
    tags = ["manual"],
)

cc_binary(
    name = "tsan",
    srcs = ["tsan.cc"],
)

sh_test(
    name = "tsan_test",
    srcs = ["sanitizer_test.sh"],
    data = [
        ":tsan",
        "@gcc_toolchain_x86_64//:libtsan",
    ],
    env = {
        "BINARY": "$(rootpath :tsan)",
        "EXPECTED_MESSAGE": "WARNING: ThreadSanitizer: data race",
        "INTERNAL_LD_PRELOAD": "$(rootpath @gcc_toolchain_x86_64//:libtsan)",
    },
    tags = ["manual"],
)

cc_binary(
    name = "ubsan",
    srcs = ["ubsan.c"],
)

sh_test(
    name = "ubsan_test",
    srcs = ["sanitizer_test.sh"],
    data = [
        ":ubsan",
        "@gcc_toolchain_x86_64//:libubsan",
    ],
    env = {
        "BINARY": "$(rootpath :ubsan)",
        "EXPECTED_MESSAGE": "runtime error: signed integer overflow: 2147483647 + 1 cannot be represented in type 'int'",
        "INTERNAL_LD_PRELOAD": "$(rootpath @gcc_toolchain_x86_64//:libubsan)",
    },
    tags = ["manual"],
)
